# reddit-market-signal-ml

./: README.md  pyproject.toml
configs/: base.yaml  models.yaml
data/: README.md
scripts/: 01_fetch_reddit.py  02_fetch_market.py  03_build_weekly_dataset.py  04_train_models.py  05_run_demo.py  06_generate_report_assets.py  07_train_models_by_asset.py  08_robustness_analysis.py  09_finbert_comparison.py  _bootstrap.py
src/tfe_reddit/: __init__.py  config.py
src/tfe_reddit/data/: __init__.py  market_data.py  reddit_ingestion.py  weekly_dataset.py
src/tfe_reddit/demo/: __init__.py  app.py
src/tfe_reddit/evaluation/: __init__.py  interpretability.py  metrics.py
src/tfe_reddit/features/: __init__.py  finbert.py  market_features.py  text_features.py
src/tfe_reddit/modeling/: __init__.py  models.py  train.py  validation.py
src/tfe_reddit/utils/: io.py
tests/: test_modeling_pipeline.py  test_text_features.py
