[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-market-signal-ml"
version = "0.1.0"
description = "Sistema reproducible para estudiar señal textual de Reddit en predicción semanal de BTC, DOGE y SPY"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Daniel Parada Garcia" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "scipy>=1.11",
  "requests>=2.31",
  "scikit-learn>=1.5",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "praw>=7.7",
  "yfinance>=0.2.40",
  "vaderSentiment>=3.3.2",
  "plotly>=5.22",
  "streamlit>=1.35",
  "tqdm>=4.66"
]

[project.optional-dependencies]
boosting = [
  "xgboost>=2.0",
  "lightgbm>=4.0"
]
interpretability = [
  "shap>=0.46"
]
nlp = [
  "transformers>=4.41",
  "torch>=2.2"
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
